--- a/ludotheque/src/main/resources/application.properties
+++ b/ludotheque/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-spring.application.name=ludotheque
-spring.datasource.url=jdbc:h2:file:C:/Users/oussa/Downloads/ludotheque/ludotheque/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.application.name=ludotheque
+#spring.datasource.url=jdbc:h2:file:C:/Users/oussa/Downloads/ludotheque/ludotheque/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
+
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/springapi
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
